cabal-version: 1.12
name:           refurb
version:        0.3.0.3
synopsis:       Tools for maintaining a database
description:    Tools for maintaining a database
category:       Database
homepage:       https://github.com/ConferOpenSource/refurb#readme
maintainer:     oss@vitalbio.com
copyright:      2017 Confer Health, Inc., 2020 Vital Biosciences
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Refurb
      Refurb.Cli
      Refurb.MigrationUtils
      Refurb.Run.Backup
      Refurb.Run.Info
      Refurb.Run.Internal
      Refurb.Run.Migrate
      Refurb.Store
      Refurb.Types
  other-modules:
      Paths_refurb
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  build-depends:
      ansi-wl-pprint
    , base >=4.7 && <5
    , bytestring
    , classy-prelude
    , composite-base ==0.8.*
    , composite-opaleye ==0.8.*
    , dlist
    , exceptions
    , fast-logger
    , lens
    , monad-control
    , monad-logger
    , old-locale
    , opaleye >= 0.9.2 && <0.9.4
    , optparse-applicative
    , postgresql-simple
    , process
    , product-profunctors
    , template-haskell
    , text
    , these
    , these-lens
    , thyme
    , transformers-base
    , vector-space
  default-language: Haskell2010

test-suite refurb-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      MigrationUtilsSpec
      Paths_refurb
  hs-source-dirs:
      test
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -fno-warn-orphans
  build-depends:
      ansi-wl-pprint
    , base >=4.7 && <5
    , bytestring
    , classy-prelude
    , composite-base ==0.8.*
    , composite-opaleye ==0.8.*
    , dlist
    , exceptions
    , fast-logger
    , hspec
    , lens
    , monad-control
    , monad-logger
    , old-locale
    , opaleye >= 0.9.2 && <0.9.4
    , optparse-applicative
    , postgresql-simple
    , process
    , product-profunctors
    , refurb
    , template-haskell
    , text
    , these
    , these-lens
    , thyme
    , transformers-base
    , vector-space
  default-language: Haskell2010
