cabal-version: 1.12

name:           refurb-example
version:        0.1.0.0
synopsis:       Tools for maintaining a database
description:    Tools for maintaining a database
category:       Database
homepage:       https://github.com/ConferHealth/refurb#readme
maintainer:     it@confer.care
copyright:      2017 Confer Health, Inc.
build-type:     Simple

executable refurb-example-exe
  main-is: Main.hs
  default-extensions:
      Arrows
      ConstraintKinds
      DataKinds
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PatternSynonyms
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  ghc-options: -Wall -Werror -O2
  build-depends:
      base >=4.7 && <5
    , classy-prelude
    , postgresql-simple
    , refurb
  other-modules:
      Paths_refurb_example
  default-language: Haskell2010
